--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.15.0",
+    "jquery": "^3.4.1",
     "mysql": "^2.16.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
